--- a/styles/slider.scss
+++ b/styles/slider.scss
@@ -1,3 +1,8 @@
+@keyframes visionSelectedPage {
+  0%{height: 100vh}
+  100%{height: 0}
+}
+
 .backgr {
   height: 100vh;
   width: 100vw;
@@ -5,6 +10,7 @@
   margin: 0;
   overflow: auto;
   position: relative;
+  overflow: hidden;
 
   .content {
     
@@ -79,15 +85,14 @@
 
 .slider {
   display: flex;
-  gap: 4vmin;
+  
   position: absolute;
   top: 50%;
   left: 40%;
   transform: translate(0, -50%);
   height: 100%;
   align-items: center;
-
-
+gap:4vmin;
 
   -moz-user-select: none;
   -o-user-select: none;
@@ -106,6 +111,14 @@
     -ms-user-select: none;
     user-select: none;
     transition: all 1s ease-in;
+  }
+
+  .gag{
+    display: block;
+    background:red;
+    width: 4vmin;
+    height: 100%;
+    border:1px solid white
   }
 
 
