--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -16,11 +16,11 @@
         transition: all .8s ease-in-out;
     }
 
-    .activeaaa {
-        width: 100vw;
-        height: 100vh;
+    // .activeaaa {
+    //     width: 100vw;
+    //     height: 100vh;
         
-    }
+    // }
     .sliderItem_content {
         position: absolute;
         top: 0;
@@ -31,6 +31,7 @@
         justify-content: center;
         align-items: center;
         color: white;
+        
         
         .title{
             display: flex;
