--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -30,7 +30,7 @@
             width: 50vmin;
             gap: 5vmin;
             height: 90vmin;
-            background:grey;
+            background:rgba(255, 255, 255, 0.216);
         }
 
         .SelectedPage_imageBlock_img {
@@ -59,7 +59,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-
+            padding-bottom: 20vh;
             .SelectedPage_content_images_item {
                 width: 100%;
                 height: auto;
