--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -1,9 +1,11 @@
+
+
 .SelectedPage {
-    height: 0;
+    height: 100vh;
     width: 100vw;
     position: relative;
     overflow-y: hidden;
-
+    
     .SelectedPage_scrollBlock {
 
         width: .5vmin;
