--- a/styles/slider.scss
+++ b/styles/slider.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.backgr {
+.container {
   height: 100vh;
   width: 100vw;
   background: rgb(17, 10, 10);
@@ -19,7 +19,7 @@
 
   .content {
     height: 100%;
-    
+
     .sliderAndMinislider {
       position: relative;
       display: flex;
@@ -120,12 +120,76 @@
         border-radius: 10px;
       }
 
+      .about_image {
+        position: absolute;
+        top: 20vmin;
+        left: 10%;
+        width: 40%;
+
+        .img {
+          height: 100%;
+          width: 90%;
+          box-sizing:content-box;
+          box-shadow: 0 0 0 3px black,  0 0 0 5px white,  0 0 0 8px black, 0 0 0 10px white ;
+
+        }
+      }
+
       .about_content {
         position: absolute;
         top: 20vmin;
-        right: 40vmin;
-        font-size: 25px;
-        width: 30%;
+        right: 10%;
+        font-size: 20px;
+        width: 40%;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        gap: 2vmin;
+        padding-bottom: 10vmin;
+
+        .about_content_textBlock {
+          display: flex;
+          flex-wrap: wrap;
+          column-gap: 1vmin;
+
+          &.ul::before {
+            // content: '-'
+          }
+        }
+
+        .about_content_textBlock_span {
+          display: flex;
+          flex-wrap: wrap;
+          overflow: hidden;
+
+          .about_content_textBlock_span_text {
+            display: block;
+
+            transform: translateY(-100%);
+
+            transition: all 1s .1s;
+
+            &.title {
+              color: white;
+              font-size: 30px;
+              // text-shadow: 2px 2px grey, 4px 4px red;
+              text-decoration: dashed;
+
+              padding: 0 5px;
+            }
+
+            &.uppercase {
+              text-transform: uppercase;
+            }
+
+
+          }
+
+          &.element-show .about_content_textBlock_span_text {
+            transform: none;
+          }
+        }
+
 
       }
     }
