--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -37,12 +37,12 @@
             display: flex;
             justify-content: space-between;
             
-            width: 100vmin;
+            width: 80%;
             overflow: hidden;
             div{
                 display: flex;
                 width: 100%;
-              
+                
                 justify-content: space-between;
             }
             h1{
