--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -123,6 +123,6 @@
     }
 }
 
-// @media (max-width:600px) {
-//     .SelectedPage_imageBlock_header{}
-// }
+@media (max-width:600px) {
+    .SelectedPage_imageBlock_header{}
+}
