--- a/styles/slider.scss
+++ b/styles/slider.scss
@@ -119,7 +119,7 @@
       font-size: 60px;
       font-weight: 1000;
       // background: green;
-
+      cursor: pointer;
 
     }
 
@@ -296,7 +296,7 @@
 
       span {
         display: block;
-
+        cursor: pointer;
       }
 
       .header_item {
