--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -45,7 +45,8 @@
                 
                 justify-content: space-between;
             }
-            h1{
+            span{
+                font-size: 20px;
                 animation: titleUp 1s ease-in-out ;
             }
         }
