--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -46,6 +46,7 @@
                 justify-content: space-between;
             }
             span{
+                cursor: pointer;
                 font-size: 20px;
                 animation: titleUp 1s ease-in-out ;
             }
