add express server (not there)

--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -153,7 +153,7 @@
                 }
 
                 &.blur{
-                    background:grey;
+                    background:black;
                     filter: blur(4px);
                 }
             }
