--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -131,7 +131,7 @@
         margin: 0 auto;
         .SelectedPage_content_images {
 
-            // margin-top: 20vh;
+            margin-top: 20vh;
             gap: 20vh;
 
             gap: 20px;
