--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -129,13 +129,14 @@
         justify-content: center;
         gap: 2vw;
         margin: 0 auto;
+        
         .SelectedPage_content_images {
 
             margin-top: 20vh;
             gap: 20vh;
 
             gap: 20px;
-            width: 60%;
+            width: 100%;
             height: fit-content;
             display: flex;
             flex-direction: column;
@@ -166,6 +167,9 @@
 }
 
 @media (max-width:600px) {
+    .SelectedPage_content{
+        flex-wrap: wrap;
+    }
     .SelectedPage_imageBlock_header {
         top: 50%;
         left: 50%;
@@ -181,5 +185,6 @@
         // gap: 15vh !important;
         margin-top: 15vh !important;
         padding-bottom: 15vh !important;
+        
     }
 }
