--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -29,7 +29,7 @@
     width: 100vw;
     position: relative;
     overflow-y: hidden;
-    background:rgb(155, 155, 155);
+    // background:rgb(12, 12, 12);
     .SelectedPage_scrollBlock {
 
         width: .5vmin;
@@ -147,6 +147,7 @@
                 width: 100%;
                 height: 60vh;
                 height: auto;
+                border: 1px solid rgba(255, 255, 255, 0.237);
                 // aspect-ratio: 3/2;
                 object-fit: contain;
                 // opacity: .1;
