--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -72,8 +72,12 @@
         position: relative;
         height: 100%;
         width: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
+
+
+        // background-size: cover;
+        // background-repeat: no-repeat;
+
+        
         // object-fit: fill;
         // object-position: 50% 50%;
         // background: rgb(240, 15, 15);
