--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -120,6 +120,7 @@
             flex-direction: column;
             width: auto;
             gap: 5vh;
+            z-index: 1;
             // background: green;
         }
 
