--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
   overflow: hidden;
   min-height: 100vh;
   width: 100vw;
-  background:rgb(0, 0, 0);
+  /* background:rgb(0, 0, 0); */
   color: white
 }
 
