--- a/styles/focusedImage.scss
+++ b/styles/focusedImage.scss
@@ -28,5 +28,17 @@
         // background:green;
         object-fit: contain;
         filter: blur(0);
+        animation: visible .5s ease-in-out  forwards
+    }
+}
+
+
+@keyframes visible {
+    0%{
+        opacity:0;
+
+    }
+    100%{
+        opacity:1;
     }
 }
