--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -14,6 +14,12 @@
         -ms-user-select: none;
         user-select: none;
         transition: all .8s ease-in-out;
+        opacity: 1;
+        transition: all 3s;
+        // box-shadow:  0 0 0 0vmin black;
+        &.blur {
+            opacity: 0;
+        }
     }
 
 
