--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,11 @@ body {
   max-width: 100vw;
   overflow: hidden;
   font-family: "Try_clover";
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
   background: rgb(21, 21, 21);
 }
+
+
 
 a {
   color: inherit;
